syntax = "proto3";

import "golem/common/account_id.proto";
import "golem/common/project_id.proto";
import "golem/cloud/projectpolicy/project_policy_id.proto";

package golem.cloud.projectgrant;

message ProjectGrantData {
  golem.common.AccountId grantee_account_id = 1;
  golem.common.ProjectId grantor_project_id = 2;
  golem.cloud.projectpolicy.ProjectPolicyId project_policy_id = 3;
}
