syntax = "proto3";

import "golem/common/uuid.proto";

package golem.common;

message ProjectId {
  golem.common.UUID value = 1;
}
